에셋 업데이트

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <h1 class="brand-title">WithTour</h1>
             <p class="brand-sub">나에게 맞는 동아리를 찾아 떠나는 여행</p>
         </section>
+<section class="home-panel">
 <!-- 여행지  선택 다섯개 -->
         <section class="dest-fixed">
   <h3>여행지를 선택하세요</h3>
@@ -28,17 +29,13 @@
       <img src="assets/img/battle.png" alt="배틀스타디움" />
       <span>배틀스타디움</span>
     </a>
-    <a href="#tech" class="dest-card">
-      <img src="assets/img/tech.png" alt="테크노밸리" />
-      <span>테크노밸리</span>
-    </a>
-    <a href="#culture" class="dest-card">
-      <img src="assets/img/culture.png" alt="컬쳐빌리지" />
-      <span>컬쳐빌리지</span>
+    <a href="#intel" class="dest-card">
+      <img src="assets/img/intel.png" alt="테크노밸리" />
+      <span>인텔리밸리</span>
     </a>
     <a href="#disco" class="dest-card">
-      <img src="assets/img/disco.png" alt="디스코시티" />
-      <span>디스코시티</span>
+      <img src="assets/img/vibe.png" alt="디스코시티" />
+      <span>바이브시티</span>
     </a>
   </div>
 </section>
@@ -52,7 +49,7 @@
       <button class="heart-btn" aria-label="좋아요">
         ❤ <span class="count">0</span>
       </button>
-      <img src="assets/img/pop1.png" alt="힐링아일랜드 대표 이미지" />
+      <img src="assets/img/pop_healing.png" alt="힐링아일랜드 대표 이미지" />
       <h4 class="pop-title">힐링아일랜드</h4>
     </article>
 
@@ -61,7 +58,7 @@
       <button class="heart-btn" aria-label="좋아요">
         ♥ <span class="count">0</span>
       </button>
-      <img src="assets/img/pop2.png" alt="배틀스타디움 대표 이미지" />
+      <img src="assets/img/pop_battle.png" alt="배틀스타디움 대표 이미지" />
       <h4 class="pop-title">배틀스타디움</h4>
     </article>
 
@@ -70,28 +67,21 @@
       <button class="heart-btn" aria-label="좋아요">
         ♥ <span class="count">0</span>
       </button>
-      <img src="assets/img/pop3.jpg" alt="테크노밸리 대표 이미지" />
-      <h4 class="pop-title">테크노밸리</h4>
+      <img src="assets/img/pop_intel.png" alt="테크노밸리 대표 이미지" />
+      <h4 class="pop-title">인텔리벨리</h4>
     </article>
 
     <article class="pop-card">
       <button class="heart-btn" aria-label="좋아요">
         ♥ <span class="count">0</span>
       </button>
-      <img src="assets/img/pop4.jpg" alt="컬쳐빌리지 대표 이미지" />
-      <h4 class="pop-title">컬쳐빌리지</h4>
+      <img src="assets/img/pop_vive.png" alt="디스코시티 대표 이미지" />
+      <h4 class="pop-title">바이브시티</h4>
     </article>
-
-    <article class="pop-card">
-      <button class="heart-btn" aria-label="좋아요">
-        ♥ <span class="count">0</span>
-      </button>
-      <img src="assets/img/pop5.jpg" alt="디스코시티 대표 이미지" />
-      <h4 class="pop-title">디스코시티</h4>
-    </article>
-    <div class="pop-dots" aria-label="슬라이드 인디케이터"></div>
-  </div>
 </div>
+<div class="pop-dots" aria-label="슬라이드 인디케이터"></div>
+</div>
+</section>
 </section>
 
 
