내맞동페이지 연결, 참여방법 제외 메인페이지 디자인 완성

--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
         <link  rel="stylesheet" href="assets/css/style.css"/>
     </head>
     <body>
-        <header class="app-header">
+        <!-- <header class="app-header">
             <h1  class="logo"><a href="#top">WITHTOUR</a></h1>
-        </header>
+        </header> -->
         <main id="view-home" class="view">
             <!-- 위드 투어 로고 넣기 -->
         <section class="brand">
-            <h1 class="brand-title">WithTour</h1>
-            <p class="brand-sub">나에게 맞는 동아리를 찾아 떠나는 여행</p>
+            <img src="assets/img/withtour_tipo.png"  alt="위드투어 로고" />
+            <!-- <h1 class="brand-title">WithTour</h1> -->
+            <p class="brand-sub">마음이 이끄는 곳으로, 위드투어</p>
         </section>
 <section class="home-panel">
 <!-- 여행지  선택 다섯개 -->
@@ -41,7 +42,7 @@
 </section>
 
 <section class="popular">
-  <h3>세종대의 인기 여행지 ></h3>
+  <h4>&nbsp;&nbsp;&nbsp;세종대의 인기 여행지 ></h4>
 <div class="slider-wrap">
   <div class="pop-strip" aria-label="인기 여행지 슬라이더">
     <!-- 카드 1 -->
@@ -50,7 +51,8 @@
         ❤ <span class="count">0</span>
       </button>
       <img src="assets/img/pop_healing.png" alt="힐링아일랜드 대표 이미지" />
-      <h4 class="pop-title">힐링아일랜드</h4>
+      <h4 class="pop-title">&nbsp; Healing Island <span class="rating">★5.0 (동아리수)</span></h4>
+       <h5 class="date">Sep 3-4</h5>
     </article>
 
     <!-- 카드 2 -->
@@ -59,7 +61,8 @@
         ♥ <span class="count">0</span>
       </button>
       <img src="assets/img/pop_battle.png" alt="배틀스타디움 대표 이미지" />
-      <h4 class="pop-title">배틀스타디움</h4>
+      <h4 class="pop-title">&nbsp;Battle Stadium<span class="rating">★5.0 (동아리수)</span></h4>
+       <h5 class="date">Sep 3-4</h5>
     </article>
 
     <!-- 필요만큼 복제 -->
@@ -68,7 +71,8 @@
         ♥ <span class="count">0</span>
       </button>
       <img src="assets/img/pop_intel.png" alt="테크노밸리 대표 이미지" />
-      <h4 class="pop-title">인텔리벨리</h4>
+      <h4 class="pop-title">&nbsp;Intelli Valley<span class="rating">★5.0 (동아리수)</span></h4>
+      <h5 class="date">Sep 3-4</h5>
     </article>
 
     <article class="pop-card">
@@ -76,7 +80,8 @@
         ♥ <span class="count">0</span>
       </button>
       <img src="assets/img/pop_vive.png" alt="디스코시티 대표 이미지" />
-      <h4 class="pop-title">바이브시티</h4>
+      <h4 class="pop-title">&nbsp;Vibe City<span class="rating">★5.0 (동아리수)</span></h4>
+       <h5 class="date">Sep 3-4</h5>
     </article>
 </div>
 <div class="pop-dots" aria-label="슬라이드 인디케이터"></div>
