--- a/index.html
+++ b/index.html
@@ -1,121 +1,154 @@
 <!DOCTYPE html>
 <html lang="ko">
-    <head>
-        <meta  charset="UTF-8"/>
-        <meta name="viewport" content="width=device-width,  initial-scale=1.0"/>
-        <title>WITH  TOUR</title>
-        <link  rel="stylesheet" href="assets/css/style.css"/>
-    </head>
-    <body>
-        <!-- <header class="app-header">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width,  initial-scale=1.0" />
+    <title>WITH TOUR</title>
+    <link rel="stylesheet" href="assets/css/style.css" />
+  </head>
+  <body>
+    <!-- <header class="app-header">
             <h1  class="logo"><a href="#top">WITHTOUR</a></h1>
         </header> -->
-        <main id="view-home" class="view">
-            <!-- 위드 투어 로고 넣기 -->
-        <section class="brand">
-            <img src="assets/img/withtour_tipo.png"  alt="위드투어 로고" />
-            <!-- <h1 class="brand-title">WithTour</h1> -->
-            <p class="brand-sub">마음이 이끄는 곳으로, 위드투어</p>
-        </section>
-<section class="home-panel">
-<!-- 여행지  선택 다섯개 -->
+    <main id="view-home" class="view">
+      <!-- 위드 투어 로고 넣기 -->
+      <section class="brand">
+        <img src="assets/img/withtour_tipo.png" alt="위드투어 로고" />
+        <!-- <h1 class="brand-title">WithTour</h1> -->
+        <p class="brand-sub">마음이 이끄는 곳으로, 위드투어</p>
+      </section>
+      <section class="home-panel">
+        <!-- 여행지  선택 다섯개 -->
         <section class="dest-fixed">
-  <h3>여행지를 선택하세요</h3>
-  <div class="dest-grid">
-    <a href="#healing" class="dest-card">
-      <img src="assets/img/healing.png" alt="힐링아일랜드" />
-      <span>힐링아일랜드</span>
-    </a>
-    <a href="#battle" class="dest-card">
-      <img src="assets/img/battle.png" alt="배틀스타디움" />
-      <span>배틀스타디움</span>
-    </a>
-    <a href="#intel" class="dest-card">
-      <img src="assets/img/intel.png" alt="테크노밸리" />
-      <span>인텔리밸리</span>
-    </a>
-    <a href="#disco" class="dest-card">
-      <img src="assets/img/vibe.png" alt="디스코시티" />
-      <span>바이브시티</span>
-    </a>
-  </div>
-</section>
+          <h3>여행지를 선택하세요</h3>
+          <div class="dest-grid">
+            <a href="#healing" class="dest-card">
+              <img src="assets/img/healing.png" alt="힐링아일랜드" />
+              <span>힐링아일랜드</span>
+            </a>
+            <a href="#battle" class="dest-card">
+              <img src="assets/img/battle.png" alt="배틀스타디움" />
+              <span>배틀스타디움</span>
+            </a>
+            <a href="#intel" class="dest-card">
+              <img src="assets/img/intel.png" alt="테크노밸리" />
+              <span>인텔리밸리</span>
+            </a>
+            <a href="#disco" class="dest-card">
+              <img src="assets/img/vibe.png" alt="디스코시티" />
+              <span>바이브시티</span>
+            </a>
+          </div>
+        </section>
 
-<section class="popular">
-  <h4>&nbsp;&nbsp;&nbsp;세종대의 인기 여행지 ></h4>
-<div class="slider-wrap">
-  <div class="pop-strip" aria-label="인기 여행지 슬라이더">
-    <!-- 카드 1 -->
-    <article class="pop-card">
-      <button class="heart-btn" aria-label="좋아요">
-        ❤ <span class="count">0</span>
-      </button>
-      <img src="assets/img/pop_healing.png" alt="힐링아일랜드 대표 이미지" />
-      <h4 class="pop-title">&nbsp; Healing Island <span class="rating">★5.0 (동아리수)</span></h4>
-       <h5 class="date">Sep 3-4</h5>
-    </article>
+        <section class="popular">
+          <h4>&nbsp;&nbsp;&nbsp;세종대의 인기 여행지 ></h4>
+          <div class="slider-wrap">
+            <div class="pop-strip" aria-label="인기 여행지 슬라이더">
+              <!-- 카드 1 -->
+              <article class="pop-card">
+                <button class="heart-btn" aria-label="좋아요">
+                  ❤ <span class="count">0</span>
+                </button>
+                <img
+                  src="assets/img/pop_healing.png"
+                  alt="힐링아일랜드 대표 이미지"
+                />
+                <h4 class="pop-title">
+                  &nbsp; Healing Island
+                  <span class="rating">★5.0 (동아리수)</span>
+                </h4>
+                <h5 class="date">&nbsp;Sep 3-4</h5>
+              </article>
 
-    <!-- 카드 2 -->
-    <article class="pop-card">
-      <button class="heart-btn" aria-label="좋아요">
-        ♥ <span class="count">0</span>
-      </button>
-      <img src="assets/img/pop_battle.png" alt="배틀스타디움 대표 이미지" />
-      <h4 class="pop-title">&nbsp;Battle Stadium<span class="rating">★5.0 (동아리수)</span></h4>
-       <h5 class="date">Sep 3-4</h5>
-    </article>
+              <!-- 카드 2 -->
+              <article class="pop-card">
+                <button class="heart-btn" aria-label="좋아요">
+                  ♥ <span class="count">0</span>
+                </button>
+                <img
+                  src="assets/img/pop_battle.png"
+                  alt="배틀스타디움 대표 이미지"
+                />
+                <h4 class="pop-title">
+                  &nbsp;Battle Stadium<span class="rating"
+                    >★5.0 (동아리수)</span
+                  >
+                </h4>
+                <h5 class="date">&nbsp;Sep 3-4</h5>
+              </article>
 
-    <!-- 필요만큼 복제 -->
-    <article class="pop-card">
-      <button class="heart-btn" aria-label="좋아요">
-        ♥ <span class="count">0</span>
-      </button>
-      <img src="assets/img/pop_intel.png" alt="테크노밸리 대표 이미지" />
-      <h4 class="pop-title">&nbsp;Intelli Valley<span class="rating">★5.0 (동아리수)</span></h4>
-      <h5 class="date">Sep 3-4</h5>
-    </article>
+              <!-- 필요만큼 복제 -->
+              <article class="pop-card">
+                <button class="heart-btn" aria-label="좋아요">
+                  ♥ <span class="count">0</span>
+                </button>
+                <img
+                  src="assets/img/pop_intel.png"
+                  alt="테크노밸리 대표 이미지"
+                />
+                <h4 class="pop-title">
+                  &nbsp;Intelli Valley<span class="rating"
+                    >★5.0 (동아리수)</span
+                  >
+                </h4>
+                <h5 class="date">&nbsp;Sep 3-4</h5>
+              </article>
 
-    <article class="pop-card">
-      <button class="heart-btn" aria-label="좋아요">
-        ♥ <span class="count">0</span>
-      </button>
-      <img src="assets/img/pop_vive.png" alt="디스코시티 대표 이미지" />
-      <h4 class="pop-title">&nbsp;Vibe City<span class="rating">★5.0 (동아리수)</span></h4>
-       <h5 class="date">Sep 3-4</h5>
-    </article>
-</div>
-<div class="pop-dots" aria-label="슬라이드 인디케이터"></div>
-</div>
-</section>
-</section>
+              <article class="pop-card">
+                <button class="heart-btn" aria-label="좋아요">
+                  ♥ <span class="count">0</span>
+                </button>
+                <img
+                  src="assets/img/pop_vive.png"
+                  alt="디스코시티 대표 이미지"
+                />
+                <h4 class="pop-title">
+                  &nbsp;Vibe City<span class="rating">★5.0 (동아리수)</span>
+                </h4>
+                <h5 class="date">&nbsp;Sep 3-4</h5>
+              </article>
+            </div>
+            <div class="pop-dots" aria-label="슬라이드 인디케이터"></div>
+          </div>
+        </section>
+        <section class="cta-row">
+        <a href="https://withtour.sejongclubunion.com/find" class="img-btn" target="_blank" rel="noopener">
+  <img src="assets/img/여행지추천받기버튼.png" alt="내맞동 링크">
+</a>
+<!-- 옆에 내부 링크 버튼 -->
+  <a href="#participate" class="btn-solid">행사<br>참여 방법</a>
+        </section>
 
+      </section>
+    </main>
 
-        </main>
+    <main id="view-healing" class="view" hidden>
+      <header class="app-header">
+            <h1  class="logo"><a href="#home"> <img src="assets/img/withtour_tipo_blue.png"> </a></h1>
+        </header>
+      <section class="top-banner healing">
+        <h2>힐링 아일랜드</h2>
+        <p>종교/봉사 분과</p>
+      </section>
 
-        <main id="view-healing" class="view" hidden>
-            <section class="top-banner healing">
-            <h2>힐링 아일랜드</h2>
-            <p>종교/봉사 분과</p>
-            </section>
+      <section class="club-list card">
+        <article class="club-item">
+          <div class="thumb"></div>
+          <div class="club-text">
+            <h4>죽순회</h4>
+            <p>다양한 경험을 접할 수 있는 세종대 중앙 봉사 동아리</p>
+          </div>
+        </article>
+        <!-- 같은 패턴으로 복제 -->
+      </section>
 
-            <section class="club-list card">
-            <article class="club-item">
-                <div class="thumb"></div>
-                <div class="club-text">
-                <h4>죽순회</h4>
-                <p>다양한 경험을 접할 수 있는 세종대 중앙 봉사 동아리</p>
-                </div>
-            </article>
-            <!-- 같은 패턴으로 복제 -->
-            </section>
+      <p style="text-align: center; margin: 40px 0">
+        <a href="#home" class="btn-primary">← 메인홈으로</a>
+      </p>
+    </main>
 
-            <p style="text-align:center; margin:40px 0;">
-            <a href="#home" class="btn-primary">← 돌아가기</a>
-            </p>
-        </main>
-
-        <!-- JS 연결 -->
-        <script src="assets/js/app.js"></script>
-        
-    </body>
+    <!-- JS 연결 -->
+    <script src="assets/js/app.js"></script>
+  </body>
 </html>
